# SimpleWebAudioPlayer

./: .gitignore  Flowchart.md  LICENSE  Makefile  Music.color.css  Music.css  Music.html  Music.js  Music.py  README.md  more-perf-tests.md  rust-vs-swift.md
c/: ARCHITECTURE.md  Makefile  README.md
c/include/: threadpool.h  waver.h
c/src/: audio.c  cli.c  color.c  image.c  main.c  optimized_png.c  thread_safe_console.h  threadpool.c
rust/: ARCHITECTURE.md  Cargo.toml  OPTIMIZATIONS.md  README.md
rust/src/: audio.rs  error.rs  examples.rs  main.rs
rust/src/cli/: mod.rs  tests.rs  types.rs
rust/src/color/: mod.rs  tests.rs
rust/src/image/: mod.rs  tests.rs
swift/: ARCHITECTURE.md  Package.resolved  Package.swift  README.md
swift/Sources/: Waver.swift
