[package]
name = "waver"
version = "0.4.0"
edition = "2021"
description = "A tool for generating optimized waveform visualizations from audio files"
authors = ["Michael Sinz"]
repository = "https://github.com/MichaelSinz/Waver"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
png = "0.17"
rayon = "1.10"
symphonia = { version = "0.5", features = ["mp3", "aac", "all-codecs"] }
thiserror = "2"
walkdir = "2"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
